2009-02-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 533456 – Memory leak when window is destroyed

	* gdk/directfb/gdkdirectfb.h
	* gdk/directfb/gdkprivate-directfb.h
	* gdk/directfb/gdkcursor-directfb.c
	* gdk/directfb/gdkevents-directfb.c
	* gdk/directfb/gdkwindow-directfb.c: removed all #ifdef checks for
	DIRECTFB_MAJOR_VERSION >= 1. We depend on DirectFB >= 1.0.0 now.
	Fixes a potential build issue that would lead to a memory leak as
	described in bug #533456.

2009-02-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 513422 – Unknown meaning of translatable messages

	* gdk/directfb/gdkdisplay-directfb.c: removed broken and commented
	code and the translatable messages that belonged to it.

2009-02-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 560671 – the client_message API doesn't work in DirectFB

	* gdk/directfb/gdkevents-directfb.c: applied a slightly cleaned up
	patch from Steve Lhomme that adds this functionality using
	DirectFB's DFBUserEvent.

2009-02-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 543710 – Dead keys do not work anymore with DirectFB

	* gdk/directfb/gdkkeys-directfb.c (gdk_directfb_translate_key):
	applied patch from Josselin Mouette that removes special handling
	of dead keys as that is done by DirectFB for a long time already.

2009-02-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* configure.in: depend on DirectFB >= 1.0.0. There's no point in
	using an earlier development version.

2009-02-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 554407 – directfb backend does not implement GdkWindowImpl

	* gdk/directfb/gdkgeometry-directfb.c
	* gdk/directfb/gdkprivate-directfb.h
	* gdk/directfb/gdkwindow-directfb.c: fix the build of the DirectFB
	backend and resurrect basic functionality. Based on a patch from
	the Ubuntu bug-tracker and work by Masse Nicolas.

2009-02-16  Tor Lillqvist  <tml@novell.com>
