@@ -1,3 +1,12 @@
+2009-02-19  Sven Neumann  <sven@gimp.org>
+
+	Merged from trunk:
+
+	* gdk/directfb/gdkwindow-directfb.c
+	(gdk_window_foreign_new_for_display, gdk_directfb_window_new):
+	initialize private->impl. Thanks to Masse Nicolas for pointing
+	this out.
+
 2009-02-18  Sven Neumann  <sven@gimp.org>
 
 	Merged from trunk:
